fix verse on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -138,8 +138,7 @@ li a {
     padding-left:20px;
   }
   .verse {
-    visibility: hidden;
-    width: 0;
+    
   }
   /*body {
     background-color: yellow;
@@ -159,8 +158,7 @@ li a {
     height: auto;
   }
   .verse {
-    visibility: hidden;
-    width: 0;
+    
   }
   .navTrigger {
     padding-left:20px;
